GL/Projet_GL/src/test/deca/syntax/invalid/sansObjet/print_without_parentheses.deca
// Test : syntax_invalid_print_without_parentheses
// But : interdire un appel de fonction sans parenthèses.
// Type d'erreur : erreur syntaxique
// Résultat attendu : erreur de syntaxe.

{
    print 3;
}